# cscn72050-lab10

./: .gitignore  CMakeLists.txt  main.cpp
static/: index.html  login.html  payment-success.html  product-1.html  product-2.html  product-3.html  product-4.html
static/scripts/: index.js  page-setup.js  payment-success.js  product-page-setup.js  products.js
static/styles/: index.css  login.css  product.css  site.css
